<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_interval"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/intervalBar"
        app:layout_constraintEnd_toEndOf="@+id/intervalBar"
        app:layout_constraintStart_toStartOf="@+id/intervalBar" />

    <TextView
        android:id="@+id/intervalCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/intervalBar"
        app:layout_constraintStart_toStartOf="@+id/intervalBar"
        app:layout_constraintTop_toBottomOf="@+id/intervalBar" />

    <SeekBar
        android:id="@+id/intervalBar"
        android:layout_width="166dp"
        android:layout_height="24dp"
        android:max="40"
        android:min="5"
        android:progress="10"
        android:progressTint="@color/white"
        android:thumbTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sensitivityBar"
        app:layout_constraintStart_toStartOf="@+id/sensitivityBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/rModeDir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:buttonTint="@color/white"
            android:onClick="onModeRadioButtonClicked"
            android:text="@string/pref_mode_dir" />

        <RadioButton
            android:id="@+id/rModeRaw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:onClick="onModeRadioButtonClicked"
            android:text="@string/pref_mode_raw" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioGroup6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/rTrigAnalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:onClick="onTrigRadioButtonClicked"
            android:text="@string/pref_trig_a" />

        <RadioButton
            android:id="@+id/rTrigDigital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:onClick="onTrigRadioButtonClicked"
            android:text="@string/pref_trig_d" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioGroup5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/rGyroOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:onClick="onGyroRadioButtonClicked"
            android:text="@string/pref_on" />

        <RadioButton
            android:id="@+id/rGyroOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:onClick="onGyroRadioButtonClicked"
            android:text="@string/pref_off" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sensitivityBar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioGroup7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/rGyroLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:onClick="onGyroReplaceRadioButtonClicked"
            android:text="@string/pref_side_l" />

        <RadioButton
            android:id="@+id/rGyroRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:onClick="onGyroReplaceRadioButtonClicked"
            android:text="@string/pref_side_r" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_mode"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup6"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup6"
        app:layout_constraintStart_toStartOf="@+id/radioGroup6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_trig"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup5"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup5"
        app:layout_constraintStart_toStartOf="@+id/radioGroup5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_gyro"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup7"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup7"
        app:layout_constraintStart_toStartOf="@+id/radioGroup7" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_side"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup8"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup8"
        app:layout_constraintStart_toStartOf="@+id/radioGroup8" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pref_sens"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/sensitivityBar"
        app:layout_constraintEnd_toEndOf="@+id/sensitivityBar"
        app:layout_constraintStart_toStartOf="@+id/sensitivityBar" />

    <SeekBar
        android:id="@+id/sensitivityBar"
        android:layout_width="166dp"
        android:layout_height="24dp"
        android:max="400"
        android:min="50"
        android:progress="100"
        android:progressTint="@color/white"
        android:thumbTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioGroup8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/sensitivityCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/sensitivityBar"
        app:layout_constraintStart_toStartOf="@+id/sensitivityBar"
        app:layout_constraintTop_toBottomOf="@+id/sensitivityBar" />

    <TextView
        android:id="@+id/lastMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="save &amp; exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>